# wifiheatmap

./: .gitmodules  .travis.yml  BssTable.qml  CMakeLists.txt  HeatMap.qml  Marker.qml  README.md  androidhelper.cpp  androidhelper.h  androidscan.cpp  androidscan.h  bssmodel.cpp  bssmodel.h  commands.cpp  commands.h  document.cpp  document.h  entries.h  heatmap.cpp  heatmap.h  heatmapprovider.cpp  heatmapprovider.h  helper.cpp  helper.h  imageprovider.cpp  imageprovider.h  interfacemodel.cpp  interfacemodel.h  iperf.cpp  iperf.h  iperfwrapper.cpp  iperfwrapper.h  linuxscan.cpp  linuxscan.h  main.cpp  main.qml  measurementcontroller.cpp  measurementcontroller.h  measurementmodel.cpp  measurementmodel.h  (+22 more)
android/: AndroidManifest.xml
android/src/org/github/weimens/wifiheatmap/: MainActivity.java  WifiScanReceiver.java
cmake/: FindDelaunator.cmake
entries/: bss.h  measurement.h  measurement_entry.h  measurement_type.h  position.h
installer/XDGData/: CMakeLists.txt  com.github.weimens.wifiheatmap.appdata.xml.in  com.github.weimens.wifiheatmap.desktop  com.github.weimens.wifiheatmap.xml
installer/rpm/: .gitignore  build_rpm.sh  wifiheatmap.spec
tests/: CMakeLists.txt  tst_bssmodel.cpp  tst_document.cpp  tst_heatmap.cpp  tst_measurementmodel.cpp  tst_measurements.cpp
trigger_scan/: CMakeLists.txt  main.cpp  trigger_scan.h
